--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -6,5 +6,6 @@
   "openfeature-provider/java": "0.11.0",
   "openfeature-provider/js": "0.6.0",
   "openfeature-provider/go": "0.5.0",
-  "openfeature-provider/ruby": "0.1.1"
+  "openfeature-provider/ruby": "0.1.1",
+  "openfeature-provider/rust": "0.1.0"
 }
