--- a/confidence-resolver/Cargo.toml
+++ b/confidence-resolver/Cargo.toml
@@ -2,9 +2,14 @@
 name = "confidence_resolver"
 version = "0.9.0"
 edition = "2021"
-# Remove this line if you want to be able to publish this crate as open source on crates.io.
-# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
-publish = false
+description = "Local resolver for Confidence feature flags"
+license = "Apache-2.0"
+repository = "https://github.com/spotify/confidence-resolver"
+homepage = "https://confidence.spotify.com/"
+keywords = ["feature-flags", "confidence", "resolver"]
+categories = ["development-tools"]
+readme = "README.md"
+include = ["src/**/*", "protos/**/*", "build.rs", "Cargo.toml", "README.md"]
 
 [lib]
 crate-type = ['rlib']
