fix: align rust provider component name in release-please
Add component field to match naming convention used by other providers.

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -67,6 +67,7 @@
       "path": "openfeature-provider/rust",
       "release-type": "rust",
       "changelog-path": "CHANGELOG.md",
+      "component": "openfeature-provider/rust",
       "initial-version": "0.1.0",
       "extra-files": ["src/version.rs"]
     }
