--- a/openfeature-provider/js/package.json
+++ b/openfeature-provider/js/package.json
@@ -27,6 +27,10 @@
         "default": "./dist/index.node.js"
       }
     },
+    "./react": {
+      "types": "./dist/index.react.d.ts",
+      "default": "./dist/index.react.js"
+    },
     "./package.json": "./package.json"
   },
   "scripts": {
@@ -44,22 +48,32 @@
     "@openfeature/core": "^1.9.0",
     "@openfeature/server-sdk": "^1.19.0",
     "@spotify/prettier-config": "^15.0.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.0",
     "@types/debug": "^4",
     "@types/node": "^24.0.1",
+    "@types/react": "^18.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "debug": "^4.4.3",
     "dotenv": "^17.2.2",
+    "jsdom": "^26.1.0",
     "prettier": "^2.8.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rolldown": "1.0.0-beta.38",
     "ts-proto": "^2.7.3",
     "tsdown": "latest",
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
-    "debug": "^4.4.3"
+    "debug": "^4.4.3",
+    "react": "^18.0.0 || ^19.0.0"
   },
   "peerDependenciesMeta": {
     "debug": {
+      "optional": true
+    },
+    "react": {
       "optional": true
     }
   },
