--- a/openfeature-provider/js/tsconfig.json
+++ b/openfeature-provider/js/tsconfig.json
@@ -6,7 +6,8 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["node"]
+    "types": ["node"],
+    "jsx": "react-jsx"
   },
   "include": ["src/**/*"]
 }
