--- a/openfeature-provider/rust/Cargo.toml
+++ b/openfeature-provider/rust/Cargo.toml
@@ -25,7 +25,9 @@ open-feature = "0.2.7"
 tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
 
 # HTTP client for state fetching and log sending
-reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
+reqwest = { version = "0.13.1" }
+reqwest-middleware = "0.5.0"
+http = "1.0.0"
 
 # Cryptography for CDN URL hash
 sha2 = "0.10"
@@ -55,8 +57,13 @@ chrono = { version = "0.4", features = ["clock"] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+num_cpus = "1.16"
 
 [[example]]
 name = "demo"
 path = "examples/demo.rs"
+
+[[example]]
+name = "bench"
+path = "examples/bench.rs"
