--- a/confidence-cloudflare-resolver/Cargo.toml
+++ b/confidence-cloudflare-resolver/Cargo.toml
@@ -27,5 +27,6 @@ getrandom = { version = "0.3.3", features = ["wasm_js"] }
 worker = { version= "0.6.1", features=['queue'] }
 base64 = "0.22.1"
 once_cell = "1.19"
+prost = "0.13"
 serde = { version = "1.0.219" }
 serde_json = "1.0.85"
