--- a/openfeature-provider/js/package.json
+++ b/openfeature-provider/js/package.json
@@ -24,6 +24,14 @@
       "types": "./dist/index.fetch.d.ts",
       "default": "./dist/index.fetch.js"
     },
+    "./react-server": {
+      "types": "./dist/react-server.d.ts",
+      "default": "./dist/react-server.js"
+    },
+    "./react-client": {
+      "types": "./dist/react-client.d.ts",
+      "default": "./dist/react-client.js"
+    },
     "./package.json": "./package.json"
   },
   "scripts": {
@@ -43,20 +51,26 @@
     "@spotify/prettier-config": "^15.0.0",
     "@types/debug": "^4",
     "@types/node": "^24.0.1",
+    "@types/react": "^18.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "debug": "^4.4.3",
     "dotenv": "^17.2.2",
     "prettier": "^2.8.8",
+    "react": "^18.0.0",
     "rolldown": "1.0.0-beta.38",
     "ts-proto": "^2.7.3",
     "tsdown": "latest",
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
-    "debug": "^4.4.3"
+    "debug": "^4.4.3",
+    "react": "^18.0.0 || ^19.0.0"
   },
   "peerDependenciesMeta": {
     "debug": {
+      "optional": true
+    },
+    "react": {
       "optional": true
     }
   },
