--- a/openfeature-provider/js/package.json
+++ b/openfeature-provider/js/package.json
@@ -24,13 +24,13 @@
       "types": "./dist/index.fetch.d.ts",
       "default": "./dist/index.fetch.js"
     },
-    "./react-server": {
-      "types": "./dist/react-server.d.ts",
-      "default": "./dist/react-server.js"
+    "./react/server": {
+      "types": "./dist/server.d.ts",
+      "default": "./dist/server.js"
     },
-    "./react-client": {
-      "types": "./dist/react-client.d.ts",
-      "default": "./dist/react-client.js"
+    "./react/client": {
+      "types": "./dist/client.d.ts",
+      "default": "./dist/client.js"
     },
     "./package.json": "./package.json"
   },
@@ -68,10 +68,14 @@
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
+    "@openfeature/core": "^1.0.0",
     "debug": "^4.4.3",
     "react": "^18.0.0 || ^19.0.0"
   },
   "peerDependenciesMeta": {
+    "@openfeature/core": {
+      "optional": true
+    },
     "debug": {
       "optional": true
     },
