--- a/openfeature-provider/js/Makefile
+++ b/openfeature-provider/js/Makefile
@@ -43,6 +43,7 @@ build: $(BUILD_STAMP)
 
 test: $(WASM_ARTIFACT) $(INSTALL_STAMP) $(GEN_TS)
 	yarn format:check
+	yarn typecheck
 	yarn test --run --exclude='**/*.e2e.test.ts'
 
 test-e2e: $(WASM_ARTIFACT) $(INSTALL_STAMP) $(GEN_TS)
